gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23982.d
version https://git-lfs.github.com/spec/v1
oid sha256:0c73154d4f316ab61ee03b1dd93e9003afb192264e3bdef38ce0b52e247fadd7
size 604
